<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#004780"
    tools:context="com.example.currencycconverter.MainActivity">

    <Button
        android:id="@+id/btnbuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:background="#188A03"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/cnv_buy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnsell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:background="#188A03"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/cnv_sell"
        app:layout_constraintBottom_toTopOf="@+id/btndb"
        app:layout_constraintStart_toStartOf="@+id/btndb" />

    <Button
        android:id="@+id/btndb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:layout_marginEnd="128dp"
        android:background="#188A03"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/database"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="45dp"
        android:background="#188A03"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/abt"
        app:layout_constraintStart_toStartOf="@+id/btndb"
        app:layout_constraintTop_toBottomOf="@+id/btndb" />


</androidx.constraintlayout.widget.ConstraintLayout>